# tpwindow

./: Makefile  README.md  build_deb.sh  generate_icon.py  meson.build
data/applications/: com.example.TopWindow.desktop
debian/: control
debian/tmp/DEBIAN/: control
src/: main.cpp
src/core/: AdbManager.cpp  AdbManager.hpp  CacheManager.cpp  CacheManager.hpp  XmlParser.cpp  XmlParser.hpp
src/models/: UiNode.cpp  UiNode.hpp  UiTreeModel.cpp  UiTreeModel.hpp
src/ui/: HierarchyWindow.cpp  HierarchyWindow.hpp  MainWindow.cpp  MainWindow.hpp  NodeAttributesPanel.cpp  NodeAttributesPanel.hpp
